@@ -1,5 +1,7 @@
 1.6.7 - 2018-XX-XX
 
+  1. Remove Hadoop3 support.
+
 
 1.6.6 - 2018-05-08
 
